# tquant

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
scripts/: cleanup.sh  run_tests.sh
tests/: __init__.py  conftest.py
tests/backtest/: __init__.py  backtest_engine.py  backtest_runner.py  backtest_validator.py  example_strategies.py  test_backtest_system.py
tests/unit/: test_async_processor_unit.py  test_batch_processor.py  test_cache_manager.py  test_config.py  test_cost_optimizer.py  test_debater.py  test_error_handler.py  test_indicators.py  test_prompt_optimizer.py  test_signal_validator.py  test_workflow.py
tquant/: __init__.py  __main__.py  cli.py  main.py
tquant/agents/: __init__.py  debater.py  market_analyst.py  signal_enhancer.py  trader.py
tquant/config/: __init__.py  config.yaml  loader.py  schema.py
tquant/utils/: __init__.py  async_analyzer.py  async_processor.py  batch_processor.py  cache_manager.py  cost_optimizer.py  enhanced_backtesting.py  error_handler.py  indicators.py  institutional_analyzer.py  liquidity_analyzer.py  logging_config.py  notification_manager.py  orderbook_analyzer.py  prompt_optimizer.py  result_recorder.py  sentiment_analyzer.py  signal_validator.py  signal_weight_optimizer.py  signals.py  tqsdk_interface.py  trading_monitor.py
tquant/workflows/: workflow.py
