[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tquant"
version = "1.0.0"
description = "A quantitative trading system with LLM-powered decision making"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["trading", "quantitative", "llm", "agent", "finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "openai>=1.0.0",
    "tqsdk>=2.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "python-json-logger>=2.0.0",
    "prometheus-client>=0.18.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tquant"
Documentation = "https://tquant.readthedocs.io"
Repository = "https://github.com/yourusername/tquant.git"
Issues = "https://github.com/yourusername/tquant/issues"

[project.scripts]
tquant = "tquant.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    ".eggs",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A"]
ignore = ["E501", "E203"]

[tool.ruff.lint.isort]
known-first-party = ["tquant"]
known-third-party = ["pydantic", "typer", "langchain"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "performance: performance tests",
    "backtest: backtest tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tquant"]

[tool.hatch.build.targets.wheel.sources]
"src/tquant" = "tquant"
